Resolves: tdf#124234 page leave signal missing on move to overflow deck

we were emitting page-entered but not emitting the page-leave signal

Change-Id: I64131631016331cf102d08244982148ac8c3c69c